# Aegis-Scan

./: .dockerignore  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  cli.py  config.py  database.py  main.py  orchestrator.py  schemas.py
backend/app/agents/: __init__.py  adaptive_agent.py  base.py  dast_agent.py  dependency_agent.py  fuzzer_agent.py  react_mixin.py  report_agent.py  secret_agent.py  static_agent.py  template_agent.py  threat_agent.py
backend/app/parsers/: __init__.py  ffuf_parser.py  gitleaks_parser.py  nuclei_parser.py  semgrep_parser.py  trivy_parser.py  zap_parser.py
backend/app/services/: database_store.py  finding_explainer.py  git_service.py  llm_client.py  results_store.py  tool_launcher.py  voice.py  voice_parser.py
backend/app/web/: websocket_manager.py
docker/: Dockerfile  entrypoint.sh
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentCommandCenter.tsx  AgentProgressList.tsx  AnimatedStatsCard.tsx  CinematicAnimator.tsx  DetailPanel.tsx  FindingsGrid.tsx  FindingsTable.tsx  FindingsVisualizations.tsx  HalEye.tsx  LogsPanel.tsx  PresentationCard.tsx  ReportActions.tsx  ScanForm.tsx  VoiceControls.tsx  VoiceTranscript.tsx
frontend/src/contexts/: ScanContext.tsx
frontend/src/hooks/: useElevenLabs.ts  useWebsocket.ts  (+2 more)
(+7 files in other folders)
